--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ cmdstanpy==1.2.4
 contourpy==1.3.0
 convertdate==2.4.0
 cycler==0.12.1
-Cython>=0.22
+#Cython>=0.22
 ephem==4.1.5
 fonttools==4.53.1
 frozendict==2.4.4
